monitor_error.log
fatal: not in a git directory
fatal: not in a git directory
fatal: not a git repository (or any of the parent directories): .git
fatal: not a git repository (or any of the parent directories): .git
fatal: not a git repository (or any of the parent directories): .git
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
  File "/home/master_monitor.py", line 1
    --- START OF FILE master_monitor.py (新版本) ---
              ^^
SyntaxError: invalid syntax
